# omniperf

./: .cmake-format.yaml  .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  .wordlist.txt  .zenodo.json  AUTHORS  CHANGELOG.md  CHANGES  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  VERSION  docker-compose.yml  pyproject.toml  requirements-doc.txt  requirements.txt  rocprofcompute.lua.in
tests/: 4gpus.json  CMakeLists.txt  generate_test_analyze_workloads.py  generate_workloads.sh  test_analyze_commands.py  test_analyze_workloads.py  test_import_workloads.py  test_profile_general.py  test_saved_analysis.py  test_utils.py  vcopy_MI100  vcopy_MI200
tests/workloads/Axes1/mi100/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/Axes1/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
tests/workloads/Axes2/mi100/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/Axes2/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/Axes3/mi100/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/Axes3/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
tests/workloads/Axes4/mi100/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/Axes4/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
tests/workloads/Baseline_vcopy_mi100/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_dispatch_info.csv  pmc_perf.csv  pmc_perf_0.csv  pmc_perf_1.csv  pmc_perf_10.csv  pmc_perf_11.csv  pmc_perf_12.csv  pmc_perf_13.csv  pmc_perf_14.csv  pmc_perf_15.csv  pmc_perf_16.csv  pmc_perf_2.csv  pmc_perf_3.csv  pmc_perf_4.csv  pmc_perf_5.csv  pmc_perf_6.csv  pmc_perf_7.csv  pmc_perf_8.csv  pmc_perf_9.csv  sysinfo.csv  timestamps.csv
tests/workloads/Baseline_vcopy_mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  pmc_perf_0.csv  pmc_perf_1.csv  pmc_perf_10.csv  pmc_perf_11.csv  pmc_perf_12.csv  pmc_perf_13.csv  pmc_perf_14.csv  pmc_perf_15.csv  pmc_perf_16.csv  pmc_perf_17.csv  pmc_perf_18.csv  pmc_perf_2.csv  pmc_perf_3.csv  pmc_perf_4.csv  pmc_perf_5.csv  pmc_perf_6.csv  pmc_perf_7.csv  pmc_perf_8.csv  pmc_perf_9.csv  roofline.csv  sysinfo.csv  timestamps.csv
tests/workloads/CPC/mi100/: pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/CPC/mi200/: pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/CPF/mi100/: pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/CPF/mi200/: pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_int_inv1/mi100/: pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_int_inv1/mi200/: pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_int_inv2/mi100/: pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_int_inv2/mi200/: pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_str_inv1/mi100/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_str_inv1/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_str_inv2/mi100/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_str_inv2/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_str_inv3/mi100/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_str_inv3/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_str_inv4/mi100/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_str_inv4/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_val_int/mi100/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_val_int/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_val_int2/mi100/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
tests/workloads/D_val_int2/mi200/: pmc_perf.csv  (+8 more)
(+7662 files in other folders)
